tests/negative/runtime/array_index_out_of_bounds/input.ci
void main() {
    int[] values = [1, 2, 3];
    print(toString(arrayGet(values, 5)) + "\n");
}
